Noteworthy changes in version 2.0.0 (unreleased)
------------------------------------------------

 * New function gpgme_op_random_bytes to get cryptographically
   strong random bytes from gpg.  [T6694]

 * New function gpgme_op_random_value to get a cryptographically
   strong unsigned integer random value.   [T6694]

 * Removed the gpgme_attr_t enums and their functions which were
   deprecated since 2003.  [rMd54d6eaa64]

 * Removed the never implemented or announced GPGME_EXPORT_MODE_NOUID
   flags.  [rMd54d6eaa64]

 * Removed the entire trustlist feature which worked anyway only for a
   short period in 2003.  [T4834]

 * Interface changes relative to the 1.24 branch:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 gpgme_op_random_bytes                   NEW.
 gpgme_op_random_value                   NEW.
 GPGME_RANDOM_MODE_NORMAL                NEW.
 GPGME_RANDOM_MODE_ZBASE32               NEW.
 gpgme_attr_t                            REMOVED.
 gpgme_get_sig_ulong_attr                REMOVED.
 gpgme_get_sig_string_attr               REMOVED.
 gpgme_key_get_string_attr               REMOVED.
 gpgme_key_get_ulong_attr                REMOVED.
 gpgme_key_sig_get_string_attr           REMOVED.
 gpgme_key_sig_get_ulong_attr            REMOVED.
 gpgme_trust_item_get_string_attr        REMOVED.
 gpgme_trust_item_get_int_attr           REMOVED.
 GPGME_EXPORT_MODE_NOUID                 REMOVED.
 GPGME_EVENT_NEXT_TRUSTITEM              REMOVED.
 gpgme_trust_item_t                      REMOVED.
 GpgmeTrustItem                          REMOVED.
 gpgme_op_trustlist_start                REMOVED.
 gpgme_op_trustlist_next                 REMOVED.
 gpgme_op_trustlist_end                  REMOVED.
 gpgme_trust_item_ref                    REMOVED.
 gpgme_trust_item_unref                  REMOVED.
 gpgme_trust_item_release                REMOVED.


Noteworthy changes in version 1.24.1 (2024-12-04)
-------------------------------------------------
