@@ -62,7 +62,7 @@ decrypt_verify_start (gpgme_ctx_t ctx, int synchronous,
   if (err)
     return err;
 
-  err = _gpgme_op_decrypt_init_result (ctx, plain);
+  err = _gpgme_op_decrypt_init_result (ctx, plain, flags);
   if (err)
     return err;
 
