@@ -1491,6 +1491,7 @@ typedef enum
   {
     GPGME_DECRYPT_VERIFY = 1,
     GPGME_DECRYPT_ARCHIVE = 2,
+    GPGME_DECRYPT_LISTONLY = 16,
     GPGME_DECRYPT_UNWRAP = 128
   }
 gpgme_decrypt_flags_t;
